--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
                                 <li>Unity</li>
                                 <ul>
                                     <li>VFX Graph/Shader Graph</li>
-                                    <li>Animator/Particle System/Physics/Joints/NavMesh</li>
+                                    <li>Animator/Particle System/Physics/Joints/NavMesh etc</li>
                                     <li>SoundSource/SoundMixer/setting up sound assets</li>
                                     <li>Custom Editors/Property Drawers (Default/OdinInspector)</li>
                                     <li>In-App Purchasing</li>
@@ -242,17 +242,20 @@
                     </td>
                     <td>
                         <ul>
-                            
                             <li>
-                                “Azur Games” azurgames.com <br>
-                                December 2020 - May 2021<br>
+                                “KobGames” kobgames.com<br>
+                                August 2022 - Now<br>
                                 Unity Developer (sole proprietor)
-                            </li>
-                            <br>
+                            </li><br>
                             <li>
                                 “Wanna Play” wannaplay.gg<br>
                                 June 2021 - January 2022<br>
                                 Unity Developer/ Producer (sole proprietor)
+                            </li><br>
+                            <li>
+                                “Azur Games” azurgames.com <br>
+                                December 2020 - May 2021<br>
+                                Unity Developer (sole proprietor)
                             </li>
                         </ul>
                     </td>
@@ -280,7 +283,7 @@
                                 <br>
                                 E-commerce
                                 <br>
-                                China – 06/2021 
+                                China - 06/2021 
                             </li>
                             <br>
                             <li>
@@ -288,13 +291,13 @@
                                 <br>
                                 Programming in computer systems
                                 <br>
-                                Russia – 06/2018
+                                Russia - 06/2018
                             </li>
                             <br>
                             <li>
                                 High School Diploma
                                 <br>
-                                Russia – 06/2014 
+                                Russia - 06/2014 
                             </li>
                         </ul>
                     </td>
