--- a/index.html
+++ b/index.html
@@ -220,6 +220,15 @@
                         </ul>
 
                         <br>
+                        Design/Graphics
+                        <ul>
+                            <li>VFX</li>
+                            <li>Simple 2D Art & UI / Pixel Art</li>
+                            <li>Simple SFX</li>
+                        </ul>
+
+
+                        <br>
                         Languages:
                         <ul>
                             <li>Russian: Native</li>
