--- a/index.html
+++ b/index.html
@@ -166,9 +166,9 @@
                                 <li>Unity</li>
                                 <ul>
                                     <li>VFX Graph/Shader Graph</li>
+                                    <li>Custom Editors/Property Drawers (Default/OdinInspector)</li>
                                     <li>Animator/Particle System/Physics/Joints/NavMesh etc</li>
                                     <li>SoundSource/SoundMixer/setting up sound assets</li>
-                                    <li>Custom Editors/Property Drawers (Default/OdinInspector)</li>
                                     <li>In-App Purchasing</li>
                                     <li>Pro Builder</li>
                                 </ul>
@@ -182,8 +182,9 @@
                             <br>
                             Frameworks/SDK:
                             <ul>
-                                <li>LeoEcsLite, LeoEcs</li>
+                                <li>LeoEcs(Lite)</li>
                                 <li>DOTween</li>
+                                <li>OdinInspector</li>
                                 <li>Facebook, AppMetrica, AppsFlayer</li>
                                 <li>Admob, AppLovin</li>
                             </ul>
