--- a/index.html
+++ b/index.html
@@ -172,8 +172,9 @@
                                     <li>In-App Purchasing</li>
                                     <li>Pro Builder</li>
                                 </ul>
-                                <li>Visual Studio, VSCode, Android Studio</li>
-                                <li>Git</li>
+                                <!--<li>Visual Studio, VSCode, Android Studio</li>-->
+                                <!--<li>Git</li>-->
+                                <li>Some IDE, Git</li>
                                 <li>Blender</li>
                                 <li>Photoshop</li>
                                 <li>FL Studio, Audacity (Creating and processing sounds)</li>
@@ -217,13 +218,13 @@
                         Architectural design:
                         <ul>
                             <li>OOP, Data Oriented Design</li>
-                            <li>SOLID, ECS, KISS, MVVM</li>
+                            <li>SOLID, MVVM, KISS, ECS</li>
                         </ul>
 
                         <br>
-                        Design/Graphics
+                        Design/Graphics/Sound
                         <ul>
-                            <li>VFX</li>
+                            <li>VFX/</li>
                             <li>Simple 2D Art & UI / Pixel Art</li>
                             <li>Simple SFX</li>
                         </ul>
