--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@
                         <br>
                         Design/Graphics/Sound
                         <ul>
-                            <li>VFX/</li>
+                            <li>VFX</li>
                             <li>Simple 2D Art & UI / Pixel Art</li>
                             <li>Simple SFX</li>
                         </ul>
