--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
                         Programming languages:
                         <ul class="no_ul_mark">
                             <li><div class = "star on"></div><div class = "star on"></div><div class = "star on"></div> 
-                                C#/.Net (Unity, Windows.Forms, WPF, Xamarin, code optimization)</li>
+                                C#/.Net (Unity, Windows.Forms, WPF, Xamarin,<br>code optimization)</li>
                             <li><div class = "star on"></div><div class = "star on"></div><div class = "star off"></div> 
                                 Java (Android Studio, Selenium)</li>
                             <li><div class = "star on"></div><div class = "star on"></div><div class = "star off"></div> 
