--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
             <table>
                 <tr>
                     <td>
-                        <img class="helloblock__myphoto" src="images/MyPhoto.png" alt="">
+                        <img class="helloblock__myphoto" src="images/MyPhoto.jpg" alt="">
                     </td>
                     <td>
                         <p> Hey👋🏻, I'm Mikhail <span class="helloblock__cursor">_</span> </p>
