--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
                         Programming languages:
                         <ul class="no_ul_mark">
                             <li><div class = "star on"></div><div class = "star on"></div><div class = "star on"></div> 
-                                C#/.Net (Unity, Windows.Forms, WPF, Xamarin,<br>code optimization)</li>
+                                C#/.Net (Unity, Windows.Forms, WPF, Xamarin,<br>code optimization, low-level optimization)</li>
                             <li><div class = "star on"></div><div class = "star on"></div><div class = "star off"></div> 
                                 Java (Android Studio, Selenium)</li>
                             <li><div class = "star on"></div><div class = "star on"></div><div class = "star off"></div> 
@@ -218,7 +218,7 @@
                         Architectural design:
                         <ul>
                             <li>OOP, Data Oriented Design</li>
-                            <li>SOLID, MVVM, KISS, ECS</li>
+                            <li>SOLID, MVVM, MVC, ECS</li>
                         </ul>
 
                         <br>
