--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
                             <br>
                             Frameworks/SDK:
                             <ul>
-                                <li>LeoEcs(Lite)</li>
+                                <li>LeoEcs(Lite), DragonECS</li>
                                 <li>DOTween</li>
                                 <li>OdinInspector</li>
                                 <li>Facebook, AppMetrica, AppsFlayer</li>
