--- a/index.html
+++ b/index.html
@@ -171,6 +171,7 @@
                                     <li>SoundSource/SoundMixer/setting up sound assets</li>
                                     <li>In-App Purchasing</li>
                                     <li>Pro Builder</li>
+                                    <li>Addresables/Resources(folder)</li>
                                 </ul>
                                 <!--<li>Visual Studio, VSCode, Android Studio</li>-->
                                 <!--<li>Git</li>-->
@@ -218,7 +219,7 @@
                         Architectural design:
                         <ul>
                             <li>OOP, Data Oriented Design</li>
-                            <li>SOLID, MVVM, MVC, ECS</li>
+                            <li>SOLID, ECS, MVVM, MVC</li>
                         </ul>
 
                         <br>
