--- a/index.html
+++ b/index.html
@@ -168,10 +168,11 @@
                                     <li>VFX Graph/Shader Graph</li>
                                     <li>Custom Editors/Property Drawers (Default/OdinInspector)</li>
                                     <li>Addresables/Resources(folder)</li>
-                                    <li>Animator/Particle System/Physics/Joints/NavMesh etc</li>
+                                    <li>Basic features: Animator, Particle System, Physics, Joints, NavMesh etc.</li>
                                     <li>SoundSource/SoundMixer/setting up sound assets</li>
                                     <li>In-App Purchasing</li>
                                     <li>Pro Builder</li>
+                                    <li>Cinemachine</li>
                                 </ul>
                                 <!--<li>Visual Studio, VSCode, Android Studio</li>-->
                                 <!--<li>Git</li>-->
@@ -288,7 +289,7 @@
                                 <br>
                                 Bachelor, Software Engineering
                                 <br>
-                                China - 06/2023
+                                China - 06/2024
                             </li>
                             <br>
                             <li>
