update skills/add tooltip

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="styles/helloblock.css" type="text/css">
     <link rel="stylesheet" href="styles/protfolio.css" type="text/css">
     <link rel="stylesheet" href="styles/imagebrowser.css" type="text/css">
+    <link rel="stylesheet" href="styles/tooltip.css" type="text/css">
     <body>
 
         <div class="load-screen hidden">
@@ -176,14 +177,15 @@
                                 </ul>
                                 <!--<li>Visual Studio, VSCode, Android Studio</li>-->
                                 <!--<li>Git</li>-->
-                                <li>Some IDE, Git</li>
+                                <li><span class="tooltip" data-tooltip="Visual Studio, IntelliJ IDEA, Android Studio">Some IDE</span>, Git</li>
+                                <li>ChatGPT</li>
                                 <li>Blender</li>
                                 <li>Photoshop</li>
                                 <li>FL Studio, Audacity (Creating and processing sounds)</li>
                             </ul>
                                                         
                             <br>
-                            <h3>Frameworks/SDK:</h3>
+                            <h3>Frameworks/Libraries:</h3>
                             <ul>
                                 <li>Zenject</li>
                                 <li>DOTween</li>
