--- a/index.html
+++ b/index.html
@@ -166,9 +166,9 @@
                             <ul>
                                 <li>Unity</li>
                                 <ul>
-                                    <li>VFX Graph/Shader Graph</li>
-                                    <li>Custom Editors/Property Drawers (Default/OdinInspector)</li>
-                                    <li>Addresables/Resources(folder)</li>
+                                    <li>VFX Graph, Shader Graph</li>
+                                    <li>Custom Editors, Property Drawers (Default/OdinInspector)</li>
+                                    <li>Addresables, Resources(folder)</li>
                                     <li>Basic features: Animator, Particle System, Physics, Joints, NavMesh etc.</li>
                                     <li>SoundSource/SoundMixer/setting up sound assets</li>
                                     <li>In-App Purchasing</li>
@@ -238,8 +238,8 @@
                         <br>
                         <h3>Languages:</h3>
                         <ul>
-                            <li>Russian: Native</li>
-                            <li>Chinese: HSK4 (258 points)</li>
+                            <li>Russian - Native</li>
+                            <li>Chinese - HSK4 (258 points)</li>
                         </ul>
                         
                         <br>
