--- a/index.html
+++ b/index.html
@@ -239,7 +239,7 @@
                         <h3>Languages:</h3>
                         <ul>
                             <li>Russian - Native</li>
-                            <li>Chinese - HSK4 (258 points)</li>
+                            <li>Chinese - B2 (HSK4)</li>
                         </ul>
                         
                         <br>
