--- a/index.html
+++ b/index.html
@@ -260,7 +260,7 @@
                         <ul>
                             <li>
                                 “KobGames” kobgames.com<br>
-                                August 2022 - Now<br>
+                                August 2022 - February 2023<br>
                                 Unity Developer (sole proprietor)
                             </li><br>
                             <li>
