--- a/index.html
+++ b/index.html
@@ -354,7 +354,7 @@
                         <img src="images/IconLinkedinGreen.png" alt="">
                     </td>
                     <td>
-                        <a href="https://www.linkedin.com/incareer/in/mikhail-usov-bb5604220">https://www.linkedin.com/incareer/in/mikhail-usov-bb5604220</a>
+                        <a href="https://www.linkedin.com/in/mikhail~dcfapixels/">https://www.linkedin.com/in/mikhail~dcfapixels/</a>
                     </td>
                 </tr>
                 <!--<tr>
