--- a/index.html
+++ b/index.html
@@ -354,7 +354,8 @@
                         <img src="images/IconLinkedinGreen.png" alt="">
                     </td>
                     <td>
-                        <a href="https://www.linkedin.com/in/mikhail~dcfapixels/">https://www.linkedin.com/in/mikhail-dcfapixels/</a>
+                        <!--<a href="https://www.linkedin.com/in/mikhail~dcfapixels/">https://www.linkedin.com/in/mikhail-dcfapixels/</a>-->
+                        <p>Due to internet problems in China, I can't use linkedin, I've had 2 accounts blocked already :(</p>
                     </td>
                 </tr>
                 <!--<tr>
