--- a/index.html
+++ b/index.html
@@ -355,7 +355,7 @@
                     </td>
                     <td>
                         <!--<a href="https://www.linkedin.com/in/mikhail~dcfapixels/">https://www.linkedin.com/in/mikhail-dcfapixels/</a>-->
-                        <p>Due to internet problems in China, I can't use linkedin, I've had 2 accounts blocked already :(</p>
+                        <p>Due to internet problems in China, I can't use linkedin, my account is blocked :(</p>
                     </td>
                 </tr>
                 <!--<tr>
