--- a/index.html
+++ b/index.html
@@ -164,21 +164,20 @@
                         <p>
                             <h3>Software:</h3>
                             <ul>
-                                <li>Unity</li>
-                                <ul>
-                                    <li>VFX Graph, Shader Graph</li>
-                                    <li>Custom Editors, Property Drawers (Default/OdinInspector)</li>
-                                    <li>Addresables, Resources(folder)</li>
-                                    <li>Basic features: Animator, Particle System, Physics, Joints, NavMesh etc.</li>
-                                    <li>SoundSource/SoundMixer/setting up sound assets</li>
-                                    <li>In-App Purchasing</li>
-                                    <li>Pro Builder</li>
-                                    <li>Cinemachine</li>
-                                </ul>
-                                <!--<li>Visual Studio, VSCode, Android Studio</li>-->
-                                <!--<li>Git</li>-->
+                                <li>Unity
+                                    <ul>
+                                        <li>VFX Graph, Shader Graph</li>
+                                        <li>Custom Editors, Property Drawers (Default/OdinInspector)</li>
+                                        <li>Addresables, Resources(folder)</li>
+                                        <li>Basic features: Animator, Particle System, Physics, Joints, NavMesh etc.</li>
+                                        <li>SoundSource/SoundMixer/setting up sound assets</li>
+                                        <li>In-App Purchasing</li>
+                                        <li>Pro Builder</li>
+                                        <li>Cinemachine</li>
+                                    </ul>
+                                </li>
                                 <li><span class="tooltip" data-tooltip="Visual Studio, IntelliJ IDEA, Android Studio">Some IDE</span>, Git</li>
-                                <li>ChatGPT</li>
+                                <li><span class="tooltip" data-tooltip="For routine tasks, careful with information">ChatGPT</span></li>
                                 <li>Blender</li>
                                 <li>Photoshop</li>
                                 <li>FL Studio, Audacity (Creating and processing sounds)</li>
@@ -259,19 +258,26 @@
                     <td>
                         <ul>
                             <li>
-                                “KobGames” kobgames.com<br>
-                                August 2022 - February 2023<br>
-                                Unity Developer (sole proprietor)
-                            </li><br>
+                                <h3>"Joint Games"</h3> 8/2022 - 4/2023<br>
+                                <ul>
+                                    <li>
+                                        <b>Unity Developer</b><br>Developed Hyper Casual games from 0 to publication, including SDK integration for analytics and in-app, Also setting up assets. creating VFX and creating simple art, UI, SFX.<br>
+                                    </li>
+                                </ul>
+                                Worked with KobGames, FreePlay.<br>
+                            </li>
+                            <br>
                             <li>
-                                “Wanna Play” wannaplay.gg<br>
-                                June 2021 - January 2022<br>
-                                Unity Developer/ Producer (sole proprietor)
-                            </li><br>
-                            <li>
-                                “Azur Games” azurgames.com <br>
-                                December 2020 - May 2021<br>
-                                Unity Developer (sole proprietor)
+                                <h3>"ARM Games"</h3> 12/2020 - 2/2022<br>
+                                <ul>
+                                    <li>
+                                        <b>Unity Developer</b><br>Same with "Joint Games".<br>
+                                    </li>
+                                    <li>
+                                        <b>Game Producer</b><br>Finding a publisher, organising the team, writing GDD, meetings, mentoring.<br>
+                                    </li>
+                                </ul>
+                                Worked with Azure Games, WannaPlay.<br>
                             </li>
                         </ul>
                     </td>
@@ -287,33 +293,39 @@
                         <ul>
                             
                             <li>
-                                Nanjing Forestry University
+                                <h3>Nanjing Forestry University</h3>
                                 <br>
-                                Bachelor, Software Engineering
+                                Bachelor's degree
                                 <br>
-                                China - 06/2024
+                                Software Engineering
+                                <br>
+                                China - 9/2021 - 6/2024
                             </li>
                             <br>
                             <li>
-                                Jiangsu Vocational Institute of Commerce
+                                <h3>Jiangsu Vocational Institute of Commerce</h3>
+                                <br>
+                                Associate's degree
                                 <br>
                                 E-commerce
                                 <br>
-                                China - 06/2021 
+                                China - 10/2018 - 6/2021 
                             </li>
                             <br>
                             <li>
-                                Togliatti Engineering College - Diploma with honors
+                                <h3>Togliatti Engineering College</h3> (Diploma with honors)
+                                <br>
+                                Associate's degree
                                 <br>
                                 Programming in computer systems
                                 <br>
-                                Russia - 06/2018
+                                Russia - 9/2014 - 6/2018
                             </li>
                             <br>
                             <li>
-                                High School Diploma
+                                <h3>High School Diploma</h3>
                                 <br>
-                                Russia - 06/2014 
+                                Russia - 6/2004 - 6/2014 
                             </li>
                         </ul>
                     </td>
@@ -355,7 +367,7 @@
                     </td>
                     <td>
                         <!--<a href="https://www.linkedin.com/in/mikhail~dcfapixels/">https://www.linkedin.com/in/mikhail-dcfapixels/</a>-->
-                        <p>Due to internet problems in China, I can't use linkedin, my account is blocked :(</p>
+                        <p>Due to internet restrictions in China, I can't use linkedin, my account is blocked :(</p>
                     </td>
                 </tr>
                 <!--<tr>
