--- a/index.html
+++ b/index.html
@@ -258,7 +258,8 @@
                     <td>
                         <ul>
                             <li>
-                                <h3>"Joint Games"</h3> 8/2022 - 4/2023<br>
+                                <h3>"Joint Games"</h3> 8/2022 - 4/2023<br> 
+                                Remote, Sole proprietor<br>
                                 <ul>
                                     <li>
                                         <b>Unity Developer</b><br>Developed Hyper Casual games from 0 to publication, including SDK integration for analytics and in-app, Also setting up assets. creating VFX and creating simple art, UI, SFX.<br>
@@ -269,6 +270,7 @@
                             <br>
                             <li>
                                 <h3>"ARM Games"</h3> 12/2020 - 2/2022<br>
+                                Remote, Sole proprietor<br>
                                 <ul>
                                     <li>
                                         <b>Unity Developer</b><br>Same with "Joint Games".<br>
