--- a/index.html
+++ b/index.html
@@ -169,8 +169,8 @@
                                         <li>VFX Graph, Shader Graph</li>
                                         <li>Custom Editors, Property Drawers (Default/OdinInspector)</li>
                                         <li>Addresables, Resources(folder)</li>
-                                        <li>Basic features: Animator, Particle System, Physics, Joints, NavMesh etc.</li>
-                                        <li>SoundSource/SoundMixer/setting up sound assets</li>
+                                        <li>Basic features: Animator, Particle System, Physics, SoundSource, NavMesh etc.</li>
+                                        <li>SoundMixer, setting up sound assets</li>
                                         <li>In-App Purchasing</li>
                                         <li>Pro Builder</li>
                                         <li>Cinemachine</li>
