--- a/index.html
+++ b/index.html
@@ -348,10 +348,8 @@
                         <img src="images/IconEmailGreen.png" alt="">
                     </td>
                     <td>
-                        <p>
-                            dcfa.m@yandex.ru <br>
-                            dcfa.m@outlook.com
-                        </p>
+                        <a href="mailto:dcfa.m@yandex.ru">dcfa.m@yandex.ru</a><br>
+                        <a href="mailto:dcfa.m@outlook.com">dcfa.m@outlook.com</a>
                     </td>
                 </tr>
                 <tr>
