--- a/index.html
+++ b/index.html
@@ -261,7 +261,7 @@
                                 Remote, Sole proprietor<br>
                                 <ul>
                                     <li>
-                                        <b>Unity Developer</b><br>Developed Hyper Casual games from 0 to publication, including SDK integration for analytics and in-app, Also setting up assets. creating VFX and creating simple art, UI, SFX.<br>
+                                        <b>Unity Developer</b><br>Developing Hyper Casual games from zero to publication, including SDK integration for analytics and in-app, also setting up assets, creating VFX and creating simple art, UI, SFX.<br>
                                     </li>
                                 </ul>
                                 Worked with KobGames, FreePlay.<br>
