--- a/index.html
+++ b/index.html
@@ -275,7 +275,7 @@
                                         <b>Unity Developer</b><br>Same with "Joint Games".<br>
                                     </li>
                                     <li>
-                                        <b>Game Producer</b><br>Finding a publisher, organising the team, writing GDD, meetings, mentoring.<br>
+                                        <b>Game Producer</b><br>Writing GDD, organising the team, mentoring, finding a publisher, meetings.<br>
                                     </li>
                                 </ul>
                                 Worked with Azure Games, WannaPlay.<br>
