--- a/index.html
+++ b/index.html
@@ -288,6 +288,26 @@
             <table class="resume__section">
                 <tr>
                     <td>
+                        <h2>Other Experience</h2>
+                    </td>
+                    <td>
+                        <ul>
+                            <li>
+                                <h3>Freelance</h3> 6/2022 - NOW<br> 
+                                <ul>
+                                    <li>
+                                        <b>Translator(Russian-Chinese)</b><br>Assisting Rostselmash in analyzing and selecting suppliers in China. <br>
+                                    </li>
+                                </ul>
+                            </li>
+                        </ul>
+                    </td>
+                </tr>
+            </table>
+            <hr>
+            <table class="resume__section">
+                <tr>
+                    <td>
                         <h2>Education</h2>
                     </td>
                     <td>
@@ -314,7 +334,7 @@
                             </li>
                             <br>
                             <li>
-                                <h3>Togliatti Engineering College</h3> (Diploma with honors)
+                                <h3>Togliatti Engineering College</h3> (With Honors)
                                 <br>
                                 Associate's degree
                                 <br>
@@ -324,7 +344,7 @@
                             </li>
                             <br>
                             <li>
-                                <h3>High School Diploma</h3>
+                                <h3>High School</h3>
                                 <br>
                                 Russia - 6/2004 - 6/2014 
                             </li>
