--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
         </ul>
 
         <div id="background">
-            <div style="filter: opacity(0.04); background-size: 600px; position:absolute; background-image: url('images/Background.png'); width: 100%; height: 100%;"></div>
-            <div style="filter: opacity(0.054); background-size: 1200px; position:absolute; background-image: url('images/Background.png'); background-position: center top; width: 100%; height: 100%;"></div>
+            <div id="background_layer_1" style="filter: opacity(0.04); background-size: 600px; position:absolute; background-image: url('images/Background.png'); width: 100%; height: 100%;"></div>
+            <div id="background_layer_2" style="filter: opacity(0.054); background-size: 1200px; position:absolute; background-image: url('images/Background.png'); background-position: center top; width: 100%; height: 100%;"></div>
             <div style=" filter: opacity(0.6); background-size: 4000px; position:absolute; background-image: url('images/BackgroundFog.png'); width: 100%; height: 100%;"></div>
             <div style=" filter: opacity(0.6); background-size: 1000px; position:absolute; background-image: url('images/BackgroundFog.png'); width: 100%; height: 100%;"></div>
             <div style=" filter: opacity(0.6); background-size: 2000px; position:absolute; background-image: url('images/BackgroundFog.png'); width: 100%; height: 100%;"></div>
