--- a/index.html
+++ b/index.html
@@ -214,6 +214,8 @@
                             <li><div class = "star on"></div><div class = "star on"></div><div class = "star off"></div> 
                                 Lua</li>
                             <li><div class = "star on"></div><div class = "star off"></div><div class = "star off"></div> 
+                                C++</li>
+                            <li><div class = "star on"></div><div class = "star off"></div><div class = "star off"></div> 
                                 Phyton</li>
                         </ul>
                             
