add content block

--- a/index.html
+++ b/index.html
@@ -110,6 +110,7 @@
 
         <div><p>-</p></div>
 <!--Spacing--> <div style="height: 250px;"></div>
+
         <div class="helloblock scroll-animation floating2">
             <table>
                 <tr>
@@ -123,8 +124,18 @@
             </table>
             </div>
         </div>
+        
 
-<!--Spacing--> <div style="height: 380px;"></div>
+<!--Spacing--> <div style="height: 350px;"></div> 
+
+<div id="content" class="scroll-animation">
+    <a href="#portfolio">portfolio</a>
+    <a href="#resume">resume</a>
+    <a href="#contact">contact</a>
+</div>
+
+
+<!--Spacing--> <div style="height: 80px;"></div>
 
         <div id="portfolio">
             <h1>Unity Projects</h1>
