--- a/index.html
+++ b/index.html
@@ -129,9 +129,9 @@
 <!--Spacing--> <div style="height: 350px;"></div> 
 
 <div id="content" class="scroll-animation">
-    <a href="#portfolio">portfolio</a>
-    <a href="#resume">resume</a>
-    <a href="#contact">contact</a>
+    <a href="#portfolio"><p>portfolio</p></a>
+    <a href="#resume"><p>resume</p></a>
+    <a href="#contact"><p>contact</p></a>
 </div>
 
 
