--- a/index.html
+++ b/index.html
@@ -238,7 +238,7 @@
                         </ul>
 
                         <br>
-                        <h3>Creative Skills</h3>
+                        <h3>Creative</h3>
                         <ul>
                             <li>Visual effects</li>
                             <li>Pixel Art</li>
