--- a/Project2.html
+++ b/Project2.html
@@ -6,7 +6,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Pirate Passage</title>
+    <title>Math Reactor</title>
 
     <link rel="stylesheet" href="styles/styles.css" type="text/css">
     <link rel="stylesheet" href="styles/resume" type="text/css">
@@ -68,33 +68,28 @@
     </ul>
 
     <div id="title">
-        <h1>Pirate Passage</h1>
+        <h1>Math Reactor</h1>
     </div>
     <hr>
     <div id="project_view">
-
-        <div>
-            <video src="videos/Project1.webm" class="my_video" controls preload="auto" width="315">
-            </video>
-            <div></div>
-            <div></div>
-            <div></div>
-        </div>
-
-
-
-        <img src="images/Screenshotes/Game1Screen1.jpg" alt="">
-        <img src="images/Screenshotes/Game1Screen2.jpg" alt="">
-        <img src="images/Screenshotes/Game1Screen3.jpg" alt="">
-        <img src="images/Screenshotes/Game1Screen4.jpg" alt="">
-        <img src="images/Screenshotes/Game1Screen5.jpg" alt="">
+        <img src="images/Screenshotes/Game2Screen1.png" alt="">
+        <img src="images/Screenshotes/Game2Screen2.png" alt="">
+        <img src="images/Screenshotes/Game2Screen3.png" alt="">
+        <img src="images/Screenshotes/Game2Screen4.png" alt="">
+        <img src="images/Screenshotes/Game2Screen5.png" alt="">
+        <img src="images/Screenshotes/Game2Screen6.png" alt="">
 
     </div>
     
 
     <div id="description">
+
         <p>
-            My role: Game Developer. 
+            Math Reactor is a simple math puzzle game. You will have to, in an unusual format, to speed count simple mathematical equations.
+            The rules of the game are very simple. Under the control of the reactor, which must be charged to a certain level, by including in the correct sequence of mathematical operations.
+        </p><br>
+        <p>
+            Pet-project / Completely my work
             <br><br>
             What I did in the project:
         </p>
@@ -112,25 +107,25 @@
                 Developed the UI;
             </li>
             <li>
-                Drew textures for ships;
+                Drew textures;
             </li>
             <li>
                 Creating a tutorial
             </li>
             <li>
-                SDK integration for Analytics;
+                Google services integration;
             </li>
         </ul>
     </div>
 
 
     <div id="links">
-        <a href="https://drive.google.com/file/d/1Y3sqR-_8SWYL4KH6Mjd4PJRXDySLTJbL/view"> 
+<!--        <a href="https://drive.google.com/file/d/1Y3sqR-_8SWYL4KH6Mjd4PJRXDySLTJbL/view"> 
             <img src="images/IconYoutubeBlue.png" alt=""><p>Gameplay</p>
         </a>
         <a href="https://disk.yandex.ru/d/3HNcnujCmgT6JA"> 
             <img src="images/IconDownloadBlue.png" alt=""><p>Download</p>
-        </a>
+        </a> -->
     </div>    
     <script src="scripts/Videoplayer.js" type="text/javascript"></script>
 </body>
