--- a/Project3.html
+++ b/Project3.html
@@ -6,7 +6,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Pirate Passage</title>
+    <title>Ragdoll Dunk 3D</title>
 
     <link rel="stylesheet" href="styles/styles.css" type="text/css">
     <link rel="stylesheet" href="styles/resume" type="text/css">
@@ -68,69 +68,34 @@
     </ul>
 
     <div id="title">
-        <h1>Pirate Passage</h1>
+        <h1>Ragdoll Dunk 3D</h1>
     </div>
     <hr>
     <div id="project_view">
-
-        <div>
-            <video src="videos/Project1.webm" class="my_video" controls preload="auto" width="315">
-            </video>
-            <div></div>
-            <div></div>
-            <div></div>
-        </div>
-
-
-
-        <img src="images/Screenshotes/Game1Screen1.jpg" alt="">
-        <img src="images/Screenshotes/Game1Screen2.jpg" alt="">
-        <img src="images/Screenshotes/Game1Screen3.jpg" alt="">
-        <img src="images/Screenshotes/Game1Screen4.jpg" alt="">
-        <img src="images/Screenshotes/Game1Screen5.jpg" alt="">
+        <img src="images/Screenshotes/Game3Screen1.webp" alt="">
+        <img src="images/Screenshotes/Game3Screen2.webp" alt="">
+        <img src="images/Screenshotes/Game3Screen3.webp" alt="">
+        <img src="images/Screenshotes/Game3Screen4.webp" alt="">
+        <img src="images/Screenshotes/Game3Screen5.webp" alt="">
+        <img src="images/Screenshotes/Game3Screen6.webp" alt="">
 
     </div>
     
 
     <div id="description">
+
+        <br>
         <p>
-            My role: Game Developer. 
+            Role: Developer
             <br><br>
-            What I did in the project:
+<!-- -->
         </p>
-        <ul>
-            <li>
-                Development of game mechanics and logic in Unity + C#;
-            </li>
-            <li>
-                Integration, configuration and optimization of assets;
-            </li>
-            <li>
-                Setting up materials, creating simple VFX
-            </li>
-            <li>
-                Developed the UI;
-            </li>
-            <li>
-                Drew textures for ships;
-            </li>
-            <li>
-                Creating a tutorial
-            </li>
-            <li>
-                SDK integration for Analytics;
-            </li>
-        </ul>
+
     </div>
 
 
     <div id="links">
-        <a href="https://drive.google.com/file/d/1Y3sqR-_8SWYL4KH6Mjd4PJRXDySLTJbL/view"> 
-            <img src="images/IconYoutubeBlue.png" alt=""><p>Gameplay</p>
-        </a>
-        <a href="https://disk.yandex.ru/d/3HNcnujCmgT6JA"> 
-            <img src="images/IconDownloadBlue.png" alt=""><p>Download</p>
-        </a>
+<!-- -->
     </div>    
     <script src="scripts/Videoplayer.js" type="text/javascript"></script>
 </body>
