--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@
                             <li><div class = "star on"></div><div class = "star off"></div><div class = "star off"></div> 
                                 C++</li>
                             <li><div class = "star on"></div><div class = "star off"></div><div class = "star off"></div> 
-                                Phyton</li>
+                                Python</li>
                         </ul>
                             
                         <br>
