--- a/index.html
+++ b/index.html
@@ -419,7 +419,8 @@
 
         <div style="height: 300px;"></div>
 
-        <a href="https://github.com/DCFApixels" id="github_button"><img src="images/GitHubButton.png" alt=""></a>
+        <a href="https://github.com/DCFApixels" id="github_button">
+        </a>
     </body>
     <script src="scripts/Other.js" type="text/javascript"></script>
     <script src="scripts/ImageBrowser.js" type="text/javascript"></script>
