--- a/Project2.html
+++ b/Project2.html
@@ -121,7 +121,7 @@
 
     <div id="links">
 <!--        <a href="https://drive.google.com/file/d/1Y3sqR-_8SWYL4KH6Mjd4PJRXDySLTJbL/view"> 
-            <img src="images/IconYoutubeBlue.png" alt=""><p>Gameplay</p>
+            <img src="svgs/IconYoutubeBlue.svg" alt=""><p>Gameplay</p>
         </a>
         <a href="https://disk.yandex.ru/d/3HNcnujCmgT6JA"> 
             <img src="images/IconDownloadBlue.png" alt=""><p>Download</p>
