--- a/index.html
+++ b/index.html
@@ -400,7 +400,7 @@
                 
                 <!--<tr>
                     <td>
-                        <img src="images/IconDiscordGreen.png" alt="">
+                        <img src="svgs/IconDiscordGreen.svg" alt="">
                     </td>
                     <td>
                         <p>
