--- a/index.html
+++ b/index.html
@@ -393,8 +393,8 @@
                         <img src="images/IconLinkedinGreen.png" alt="Linkedin Icon">
                     </td>
                     <td>
-                        <!--<a href="https://www.linkedin.com/in/mikhail~dcfapixels/">https://www.linkedin.com/in/mikhail-dcfapixels/</a>-->
-                        <p>Due to internet restrictions in China, I can't use linkedin, my account is blocked :(</p>
+                        <a href="https://www.linkedin.com/in/mikhail~dcfapixels/">https://www.linkedin.com/in/mikhail~dcfapixels/</a>
+                        <!--<p>Due to internet restrictions in China, I can't use linkedin, my account is blocked :(</p>-->
                     </td>
                 </tr>
                 
