--- a/index.html
+++ b/index.html
@@ -223,9 +223,9 @@
                             <li><div class = "star on"></div><div class = "star on"></div><div class = "star off"></div> 
                                 HTML, CSS, JS</li>
                             <li><div class = "star on"></div><div class = "star on"></div><div class = "star off"></div> 
-                                Lua</li>
-                            <li><div class = "star on"></div><div class = "star off"></div><div class = "star off"></div> 
                                 C++</li>
+                            <li><div class = "star on"></div><div class = "star on"></div><div class = "star off"></div> 
+                                Lua</li>
                             <li><div class = "star on"></div><div class = "star off"></div><div class = "star off"></div> 
                                 Python</li>
                         </ul>
