--- a/index.html
+++ b/index.html
@@ -251,7 +251,7 @@
                         <h3>Languages</h3>
                         <ul>
                             <li>Russian - Native</li>
-                            <li>Chinese - B2 (HSK4)</li>
+                            <li>Chinese - C1 (HSK5)</li>
                         </ul>
                         
                         <br>
