--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
                                         <li>Cinemachine</li>
                                     </ul>
                                 </li>
-                                <li><span class="tooltip" data-tooltip="Visual Studio, IntelliJ IDEA, Android Studio">Some IDE</span>, Git</li>
+                                <li><span class="tooltip" data-tooltip="Visual Studio, Rider, IntelliJ IDEA, Android Studio">Some IDE</span>, Git</li>
                                 <li><span class="tooltip" data-tooltip="For routine tasks, careful with information">ChatGPT</span></li>
                                 <li>Blender</li>
                                 <li>Photoshop</li>
