--- a/index.html
+++ b/index.html
@@ -385,7 +385,7 @@
                         <img src="images/IconLinkedinGreen.png" alt="Linkedin Icon">
                     </td>
                     <td>
-                        <a href="https://www.linkedin.com/in/mikhail~dcfapixels/">https://www.linkedin.com/in/mikhail~dcfapixels/</a>
+                        <a href="https://www.linkedin.com/in/mikhail~dcfapixels/">www.linkedin.com/in/mikhail~dcfapixels/</a>
                         <!--<p>Due to internet restrictions in China, I can't use linkedin, my account is blocked :(</p>-->
                     </td>
                 </tr>
