--- a/index.html
+++ b/index.html
@@ -1,16 +1,23 @@
 <!DOCTYPE html>
-<html lang="en">
-    <link rel="stylesheet" href="styles/styles.css" type="text/css">
-    <link rel="stylesheet" href="styles/resume.css" type="text/css">
-    <link rel="stylesheet" href="styles/header.css" type="text/css">
-    <link rel="stylesheet" href="styles/background.css" type="text/css">
-    <link rel="stylesheet" href="styles/spinner.css" type="text/css">
-    <link rel="stylesheet" href="styles/module.css" type="text/css">
-    <link rel="stylesheet" href="styles/navbar.css" type="text/css">
-    <link rel="stylesheet" href="styles/helloblock.css" type="text/css">
-    <link rel="stylesheet" href="styles/protfolio.css" type="text/css">
-    <link rel="stylesheet" href="styles/imagebrowser.css" type="text/css">
-    <link rel="stylesheet" href="styles/tooltip.css" type="text/css">
+    <html lang="en">
+        <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="icon" href="favicon.ico" type="image/x-icon">
+        <title>Portfolio DCFApixels</title>
+
+        <link rel="stylesheet" href="styles/styles.css" type="text/css">
+        <link rel="stylesheet" href="styles/resume.css" type="text/css">
+        <link rel="stylesheet" href="styles/header.css" type="text/css">
+        <link rel="stylesheet" href="styles/background.css" type="text/css">
+        <link rel="stylesheet" href="styles/spinner.css" type="text/css">
+        <link rel="stylesheet" href="styles/module.css" type="text/css">
+        <link rel="stylesheet" href="styles/navbar.css" type="text/css">
+        <link rel="stylesheet" href="styles/helloblock.css" type="text/css">
+        <link rel="stylesheet" href="styles/protfolio.css" type="text/css">
+        <link rel="stylesheet" href="styles/imagebrowser.css" type="text/css">
+        <link rel="stylesheet" href="styles/tooltip.css" type="text/css">
+    </head>
     <body>
 
         <div class="load-screen hidden">
