--- a/index.html
+++ b/index.html
@@ -380,7 +380,7 @@
             <table class="resume__section">
                 <tr>
                     <td>
-                        <img src="images/IconEmailGreen.png" alt="Email Icon">
+                        <img src="svgs/IconEmailGreen.svg" alt="Email Icon">
                     </td>
                     <td>
                         <a href="mailto:dcfa.m@outlook.com">dcfa.m@outlook.com</a>
@@ -389,7 +389,7 @@
                 </tr>
                 <tr>
                     <td>
-                        <img src="images/IconLinkedinGreen.png" alt="Linkedin Icon">
+                        <img src="svgs/IconLinkedinGreen.svg" alt="Linkedin Icon">
                     </td>
                     <td>
                         <a href="https://www.linkedin.com/in/mikhail~dcfapixels/">www.linkedin.com/in/mikhail~dcfapixels/</a>
