--- a/index.html
+++ b/index.html
@@ -183,18 +183,18 @@
                             <ul>
                                 <li>Unity
                                     <ul>
-                                        <li>VFX Graph, Shader Graph</li>
+                                        <li>Particle System, VFX Graph, Shader Graph, Shader Lab</li>
                                         <li>Custom Editors, Property Drawers (Default/OdinInspector)</li>
                                         <li>Addresables, Resources(folder)</li>
-                                        <li>Basic features: Animator, Particle System, Physics, SoundSource, NavMesh etc.</li>
-                                        <li>SoundMixer, setting up sound assets</li>
+                                        <li>SoundMixer, SoundSource, setting up sound assets</li>
                                         <li>In-App Purchasing</li>
                                         <li>Pro Builder</li>
                                         <li>Cinemachine</li>
+                                        <li>Other basic features: Animator, Physics, NavMesh and etc...</li>
                                     </ul>
                                 </li>
                                 <li><span class="tooltip" data-tooltip="Visual Studio, Rider, IntelliJ IDEA, Android Studio">Some IDE</span>, Git</li>
-                                <li><span class="tooltip" data-tooltip="For routine tasks, careful with information">ChatGPT</span></li>
+                                <li><span class="tooltip" data-tooltip="For routine tasks, careful with information">AI</span> (e.g., GPT) as a productivity aid</li>
                                 <li>Blender</li>
                                 <li>Photoshop</li>
                                 <li>FL Studio, Audacity (Creating and processing sounds)</li>
@@ -251,6 +251,7 @@
                             <li>Pixel Art</li>
                             <li>Simple 2D Art & UI</li>
                             <li>Simple Sound effects</li>
+                            <li>Primitive 3D models</li>
                         </ul>
 
 
@@ -296,7 +297,7 @@
                                         <b>Unity Developer</b><br>Same with "Joint Games".<br>
                                     </li>
                                     <li>
-                                        <b>Game Producer</b><br>Writing GDD, organising the team, mentoring, finding a publisher, meetings.<br>
+                                        <b>Game Producer</b><br>Writing GDD, organising the team, mentoring, finding a publisher, etc...<br>
                                     </li>
                                 </ul>
                                 Worked with Azure Games, WannaPlay.<br>
@@ -317,7 +318,7 @@
                                 <h3>Freelance</h3> 6/2023 - NOW<br> 
                                 <ul>
                                     <li>
-                                        <b>Translator(Russian-Chinese)</b><br>Assisting Rostselmash in analyzing and selecting suppliers in China. <br>
+                                        <b>Translator(Russian-Chinese)</b><br>Assisting a large Russian company in conducting supplier quality system audits in China. In my free time, I also continue working with Unity. <br>
                                     </li>
                                 </ul>
                             </li>
