--- a/Project3.html
+++ b/Project3.html
@@ -35,28 +35,28 @@
             top: -700px; left: -70%;
             height: 2500px; width: 100%;
             filter:opacity(0.15);">
-            <img src="images/Or1.png" >
+            <img src="images/Or1.png" alt="background">
         </div>
 
         <div class="background_decor" style="
             top: -500px; right: -25%;
             height: 1600px; width: 120%;
             filter: opacity(0.2);">
-            <img src="images/Or2.png" >
+            <img src="images/Or2.png" alt="background">
         </div>
         
         <div class="background_decor"  style="
             top: 100px; left: -30%;
             height: 2200px; width: 150%;
             filter:opacity(0.15);">
-            <img src="images/Or3.png">
+            <img src="images/Or3.png" alt="background">
         </div>
 
         <div class="background_decor" style="
             top: 1200px; right: -20%;
             height: 2500px; width: 100%;
             filter:opacity(0.1);">
-        <img src="images/Or4.png" >
+            <img src="images/Or4.png" alt="background">
         </div>
     </div>
 
@@ -72,12 +72,19 @@
     </div>
     <hr>
     <div id="project_view">
-        <img src="images/Screenshotes/Game3Screen1.webp" alt="">
-        <img src="images/Screenshotes/Game3Screen2.webp" alt="">
-        <img src="images/Screenshotes/Game3Screen3.webp" alt="">
-        <img src="images/Screenshotes/Game3Screen4.webp" alt="">
-        <img src="images/Screenshotes/Game3Screen5.webp" alt="">
-        <img src="images/Screenshotes/Game3Screen6.webp" alt="">
+        <div>
+            <iframe class="my_video" style="min-width: 320px; width: auto;" src="https://www.youtube.com/embed/VBgZxx1RmsI" title="Ragdoll Dunk 3D - New Release - Hyper Hybrid Casual - Gameplay Walkthrough (iOS &amp; Android)" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+            <div></div>
+            <div></div>
+            <div></div>
+        </div>
+
+        <img src="images/Screenshotes/Game3Screen1.webp" alt="screenshot">
+        <img src="images/Screenshotes/Game3Screen2.webp" alt="screenshot">
+        <img src="images/Screenshotes/Game3Screen3.webp" alt="screenshot">
+        <img src="images/Screenshotes/Game3Screen4.webp" alt="screenshot">
+        <img src="images/Screenshotes/Game3Screen5.webp" alt="screenshot">
+        <img src="images/Screenshotes/Game3Screen6.webp" alt="screenshot">
 
     </div>
     
