--- a/Project8.html
+++ b/Project8.html
@@ -35,28 +35,28 @@
             top: -700px; left: -70%;
             height: 2500px; width: 100%;
             filter:opacity(0.15);">
-            <img src="images/Or1.png" >
+            <img src="images/Or1.png" alt="background">
         </div>
 
         <div class="background_decor" style="
             top: -500px; right: -25%;
             height: 1600px; width: 120%;
             filter: opacity(0.2);">
-            <img src="images/Or2.png" >
+            <img src="images/Or2.png" alt="background">
         </div>
         
         <div class="background_decor"  style="
             top: 100px; left: -30%;
             height: 2200px; width: 150%;
             filter:opacity(0.15);">
-            <img src="images/Or3.png">
+            <img src="images/Or3.png" alt="background">
         </div>
 
         <div class="background_decor" style="
             top: 1200px; right: -20%;
             height: 2500px; width: 100%;
             filter:opacity(0.1);">
-        <img src="images/Or4.png" >
+            <img src="images/Or4.png" alt="background">
         </div>
     </div>
 
@@ -72,9 +72,9 @@
     </div>
     <hr>
     <div id="project_view">
-        <img src="images/Screenshotes/Game8Screen1.jpg" alt="">
-        <img src="images/Screenshotes/Game8Screen2.jpg" alt="">
-        <img src="images/Screenshotes/Game8Screen3.jpg" alt="">
+        <img src="images/Screenshotes/Game8Screen1.jpg" alt="screenshot">
+        <img src="images/Screenshotes/Game8Screen2.jpg" alt="screenshot">
+        <img src="images/Screenshotes/Game8Screen3.jpg" alt="screenshot">
     </div>
     
 
